# AalWiNes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aalwines-mpls-network.schema.json  test-query.json  test-route.xml  test-topo.xml  test-weight.json
.github/workflows/: build.yml
example_net/: Agis-network-pretty.json  Agis-network.json  Agis-query.q  Agis-routing.xml  Agis-topo.xml  Agis-weight.json
src/: CMakeLists.txt  aalwines-config.cmake.in  main.cpp  topology_zoo_main.cpp
src/aalwines/: Verifier.h
src/aalwines/engine/: Moped.cpp  Moped.h
src/aalwines/model/: CegarNetworkPdaFactory.h  CegarVerifier.h  EdgeStatus.h  Network.cpp  Network.h  NetworkPDAFactory.h  NetworkTranslation.h  NetworkWeight.h  Query.cpp  Query.h  Router.cpp  Router.h  RoutingTable.cpp  RoutingTable.h  filter.cpp  filter.h
src/aalwines/model/builders/: AalWiNesBuilder.cpp  AalWiNesBuilder.h  JuniperBuilder.cpp  JuniperBuilder.h  NetworkParsing.cpp  NetworkParsing.h  NetworkSAXHandler.cpp  NetworkSAXHandler.h  PRexBuilder.cpp  PRexBuilder.h  TopologyBuilder.cpp  TopologyBuilder.h  TopologyZooBuilder.cpp  TopologyZooBuilder.h
src/aalwines/model/experimental/: Network.cpp  Network.h  Router.cpp  Router.h  RoutingTable.cpp  RoutingTable.h
src/aalwines/query/: QueryBuilder.cpp  QueryBuilder.h  QueryLexer.l  QueryParser.y  Scanner.h  generated_QueryLexer.cc  generated_QueryParser.cc  generated_QueryParser.hh  location.hh  parsererrors.h
src/aalwines/synthesis/: FastRerouting.cpp  FastRerouting.h  RouteConstruction.cpp  RouteConstruction.h
src/aalwines/utils/: coordinate.cpp  coordinate.h  errors.h  json_stream.h  more_algorithms.h  outcome.h  parsing.cpp  pointer_back_inserter.h  ranges.h  stopwatch.h  string_map.h
src/engine/: Moped.cpp  Moped.h
src/model/: Network.cpp  Network.h  NetworkPDA.cpp  NetworkPDA.h  NetworkPDAFactory.cpp  NetworkPDAFactory.h  Query.cpp  Query.h  Router.cpp  Router.h  RoutingTable.cpp  RoutingTable.h  filter.cpp  filter.h
src/model/builders/: JuniperBuilder.cpp  JuniperBuilder.h  PRexBuilder.cpp  PRexBuilder.h
src/parser/: QueryBuilder.cpp  QueryBuilder.h  QueryLexer.l  QueryParser.y  Scanner.h
src/pdaaal/engine/: Moped.cpp  Moped.h  PAutomaton.cpp  PAutomaton.h  PostStar.cpp  PostStar.h  PreStar.h  Solver.h  UntypedPAutomaton.cpp  UntypedPAutomaton.h
src/pdaaal/model/: NFA.h  PDA.cpp  PDA.h  PDAFactory.h  SimplePDAFactory.h  TypedPDA.h
src/pdaaal/test/: TestPDAFactory.cpp  TestPDAFactory.h  testmain.cpp
src/query/: QueryBuilder.cpp  QueryBuilder.h  QueryLexer.l  QueryParser.y  Scanner.h  parsererrors.h
src/utils/: errors.h  outcome.h  parsing.cpp  parsing.h  stopwatch.h  system.cpp  system.h
test/: CMakeLists.txt  FastRerouting_test.cpp  JSONFormat_test.cpp  Network_test.cpp  Query_test.cpp  RouteConstruction_test.cpp  SyntacticNetwork_test.cpp  SyntheticNetwork_test.cpp  more_algorithms_test.cpp
test/Sample_networks/: Aarnet-queries.json  Aarnet-routing.xml  Aarnet-topo.xml  Agis-queries.json  Bandcon-queries.json  Bandcon-routing.xml  Bandcon-topo.xml  Bellcanada-queries.json  Bellcanada-topo.xml  Belnet2010-queries.json  Belnet2010-routing.xml  Belnet2010-topo.xml  Cesnet201006-queries.json  Cesnet201006-topo.xml  Claranet-queries.json  Claranet-routing.xml  Claranet-topo.xml  DeutscheTelekom-queries.json  DeutscheTelekom-topo.xml  create_net.sh  generate_net.sh
test/Sample_networks/gml/: Aarnet.gml  Cesnet201006.gml
test/query-language-tests/: error-query.q  query.q  routing.xml  topo.xml
